Fix styles for header on mobiles

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,6 +61,7 @@ h1 {
 }
 
 h2 {
+  font-size: $base-size * 2;
   margin: 0;
 }
 
@@ -252,6 +253,10 @@ footer {
     font-size: $base-size * 1.5;
   }
 
+  h2 {
+    font-size: $base-size;
+  }
+
   header .banner {
     top: 0;
   }
@@ -262,6 +267,7 @@ footer {
     }
 
     h1 {
+      font-size: $base-size * 1.5;
       margin: 0;
     }
 
@@ -279,7 +285,7 @@ footer {
     }
 
     h1 {
-      font-size: $base-size * 3;
+      font-size: $base-size * 2;
     }
   }
 
@@ -318,6 +324,7 @@ footer {
     }
 
     h1 {
+      font-size: $base-size * 2;
       margin: 0;
     }
 
